--- a/post-api/src/main/resources/application.properties
+++ b/post-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DataSource configuration for PostgreSQL
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/db_post}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/db_post_4fz4}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.driver-class-name=org.postgresql.Driver
