--- a/post-api/src/main/resources/application.properties
+++ b/post-api/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Optional: Connection pool settings (HikariCP)
 spring.datasource.hikari.maximum-pool-size=10
